updated feature engineering plan

--- a/feature_engineering/00_plan_and_ideas.ipynb
+++ b/feature_engineering/00_plan_and_ideas.ipynb
@@ -75,6 +75,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Things to predict\n",
+    "* won\n",
+    "* covered spread\n",
+    "* over\n",
+    "* score differential\n",
+    "* team points\n",
+    "* score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tables\n",
+    "* Source\n",
+    " * labels.over_under_labels\n",
+    " * labels.team_game_line_labels\n",
+    "\n",
+    "* Derived"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Features"
    ]
   },
@@ -107,6 +132,7 @@
     "   * rushing\n",
     " * Defense\n",
     " * Special Teams\n",
+    "* &#x23F8; DVOA rankings comparisons between 2 teams\n",
     "* Stats\n",
     " * &#x23F8; TDs\n",
     " * &#x23F8; points\n",
@@ -117,11 +143,11 @@
     " * &#x23F3; advanced\n",
     "\n",
     "### Time\n",
-    "* &#x1F6A8; time of day -- raw (tree can split on primetime)\n",
-    "* &#x1F6A8; day of week -- raw\n",
+    "* &#x2714; time of day -- raw (tree can split on primetime)\n",
+    "* &#x2714; day of week -- raw\n",
     " * very sparse other than Sunday. Sunday/not Sunday?\n",
-    "* &#x1F6A8; is playoffs\n",
-    "* &#x1F6A8; week # -- raw\n",
+    "* &#x2714; is playoffs\n",
+    "* &#x2714; week # -- raw\n",
     "* &#x23F8; days since last game\n",
     "* &#x23F8; timezone change for each team\n",
     "* &#x270B; team's body clock start time (start time relative to last week's timezone)\n",
@@ -198,6 +224,13 @@
     " * maybe the difference from 1-16 is bigger than 17-32\n",
     " * could do some sort of binning of similar matchups\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
