added matchup_id to data model and ran 01, 02, 03 as a check

--- a/public02_explore_scores_lines.ipynb
+++ b/public02_explore_scores_lines.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:15.539194Z",
-     "start_time": "2019-01-20T22:42:08.678947Z"
+     "end_time": "2019-01-21T04:18:25.788214Z",
+     "start_time": "2019-01-21T04:18:02.516588Z"
     }
    },
    "outputs": [
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:15.716104Z",
-     "start_time": "2019-01-20T22:42:15.544268Z"
+     "end_time": "2019-01-21T04:18:25.947499Z",
+     "start_time": "2019-01-21T04:18:25.795177Z"
     }
    },
    "outputs": [
@@ -75,8 +75,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:16.442192Z",
-     "start_time": "2019-01-20T22:42:15.722264Z"
+     "end_time": "2019-01-21T04:18:26.818327Z",
+     "start_time": "2019-01-21T04:18:25.952577Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:19.875210Z",
-     "start_time": "2019-01-20T22:42:16.448165Z"
+     "end_time": "2019-01-21T04:18:31.629101Z",
+     "start_time": "2019-01-21T04:18:26.823798Z"
     }
    },
    "outputs": [],
@@ -117,8 +117,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:20.318671Z",
-     "start_time": "2019-01-20T22:42:19.881708Z"
+     "end_time": "2019-01-21T04:18:32.662281Z",
+     "start_time": "2019-01-21T04:18:31.635612Z"
     }
    },
    "outputs": [
@@ -238,8 +238,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:20.760796Z",
-     "start_time": "2019-01-20T22:42:20.324586Z"
+     "end_time": "2019-01-21T04:18:33.694130Z",
+     "start_time": "2019-01-21T04:18:32.669712Z"
     }
    },
    "outputs": [],
@@ -274,8 +274,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:20.996298Z",
-     "start_time": "2019-01-20T22:42:20.766314Z"
+     "end_time": "2019-01-21T04:18:34.229383Z",
+     "start_time": "2019-01-21T04:18:33.700461Z"
     }
    },
    "outputs": [
@@ -431,8 +431,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:21.326504Z",
-     "start_time": "2019-01-20T22:42:21.003469Z"
+     "end_time": "2019-01-21T04:18:34.674900Z",
+     "start_time": "2019-01-21T04:18:34.234465Z"
     }
    },
    "outputs": [
@@ -605,8 +605,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:22.283146Z",
-     "start_time": "2019-01-20T22:42:21.332105Z"
+     "end_time": "2019-01-21T04:18:36.350421Z",
+     "start_time": "2019-01-21T04:18:34.685245Z"
     }
    },
    "outputs": [
@@ -691,8 +691,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:24.836980Z",
-     "start_time": "2019-01-20T22:42:22.288005Z"
+     "end_time": "2019-01-21T04:18:40.912098Z",
+     "start_time": "2019-01-21T04:18:36.356118Z"
     }
    },
    "outputs": [
@@ -740,8 +740,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:27.626614Z",
-     "start_time": "2019-01-20T22:42:24.841765Z"
+     "end_time": "2019-01-21T04:18:47.214836Z",
+     "start_time": "2019-01-21T04:18:40.916199Z"
     }
    },
    "outputs": [],
@@ -776,8 +776,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:31.260913Z",
-     "start_time": "2019-01-20T22:42:27.632698Z"
+     "end_time": "2019-01-21T04:18:57.649492Z",
+     "start_time": "2019-01-21T04:18:47.220878Z"
     },
     "scrolled": false
    },
@@ -872,8 +872,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:35.764819Z",
-     "start_time": "2019-01-20T22:42:31.266032Z"
+     "end_time": "2019-01-21T04:19:03.522235Z",
+     "start_time": "2019-01-21T04:18:57.657875Z"
     },
     "scrolled": false
    },
@@ -948,8 +948,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:36.799866Z",
-     "start_time": "2019-01-20T22:42:35.769446Z"
+     "end_time": "2019-01-21T04:19:05.036591Z",
+     "start_time": "2019-01-21T04:19:03.527240Z"
     },
     "scrolled": false
    },
@@ -1002,8 +1002,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:37.429481Z",
-     "start_time": "2019-01-20T22:42:36.805056Z"
+     "end_time": "2019-01-21T04:19:05.995726Z",
+     "start_time": "2019-01-21T04:19:05.043254Z"
     }
    },
    "outputs": [
@@ -1046,8 +1046,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:38.765322Z",
-     "start_time": "2019-01-20T22:42:37.435008Z"
+     "end_time": "2019-01-21T04:19:07.819019Z",
+     "start_time": "2019-01-21T04:19:06.001446Z"
     },
     "scrolled": false
    },
@@ -1142,8 +1142,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:38.944576Z",
-     "start_time": "2019-01-20T22:42:38.769826Z"
+     "end_time": "2019-01-21T04:19:07.984233Z",
+     "start_time": "2019-01-21T04:19:07.823995Z"
     }
    },
    "outputs": [
@@ -1292,8 +1292,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:41.175809Z",
-     "start_time": "2019-01-20T22:42:38.949538Z"
+     "end_time": "2019-01-21T04:19:10.676966Z",
+     "start_time": "2019-01-21T04:19:07.992460Z"
     }
    },
    "outputs": [
@@ -1473,8 +1473,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:42.966302Z",
-     "start_time": "2019-01-20T22:42:41.183829Z"
+     "end_time": "2019-01-21T04:19:12.363771Z",
+     "start_time": "2019-01-21T04:19:10.681536Z"
     },
     "run_control": {
      "marked": true
@@ -1484,7 +1484,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1f0f0850>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a213c27d0>"
       ]
      },
      "execution_count": 19,
@@ -1532,8 +1532,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:54.307005Z",
-     "start_time": "2019-01-20T22:42:42.971210Z"
+     "end_time": "2019-01-21T04:19:32.070243Z",
+     "start_time": "2019-01-21T04:19:12.413486Z"
     },
     "scrolled": true
    },
@@ -1717,8 +1717,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:54.462158Z",
-     "start_time": "2019-01-20T22:42:54.311219Z"
+     "end_time": "2019-01-21T04:19:32.364066Z",
+     "start_time": "2019-01-21T04:19:32.075349Z"
     }
    },
    "outputs": [],
@@ -1742,8 +1742,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:54.592370Z",
-     "start_time": "2019-01-20T22:42:54.467468Z"
+     "end_time": "2019-01-21T04:19:32.552374Z",
+     "start_time": "2019-01-21T04:19:32.376884Z"
     }
    },
    "outputs": [
@@ -1904,8 +1904,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:55.240040Z",
-     "start_time": "2019-01-20T22:42:54.597533Z"
+     "end_time": "2019-01-21T04:19:33.913511Z",
+     "start_time": "2019-01-21T04:19:32.558500Z"
     }
    },
    "outputs": [],
@@ -1925,8 +1925,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:55.363348Z",
-     "start_time": "2019-01-20T22:42:55.245588Z"
+     "end_time": "2019-01-21T04:19:34.174518Z",
+     "start_time": "2019-01-21T04:19:33.919527Z"
     }
    },
    "outputs": [
@@ -2125,15 +2125,15 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:56.340788Z",
-     "start_time": "2019-01-20T22:42:55.368696Z"
+     "end_time": "2019-01-21T04:19:36.510281Z",
+     "start_time": "2019-01-21T04:19:34.181524Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e095fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2171a790>"
       ]
      },
      "execution_count": 25,
@@ -2201,8 +2201,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:56.513690Z",
-     "start_time": "2019-01-20T22:42:56.346178Z"
+     "end_time": "2019-01-21T04:19:36.919606Z",
+     "start_time": "2019-01-21T04:19:36.531966Z"
     }
    },
    "outputs": [],
@@ -2231,8 +2231,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:56.640319Z",
-     "start_time": "2019-01-20T22:42:56.519460Z"
+     "end_time": "2019-01-21T04:19:37.070586Z",
+     "start_time": "2019-01-21T04:19:36.925835Z"
     }
    },
    "outputs": [
@@ -2320,15 +2320,15 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:57.070187Z",
-     "start_time": "2019-01-20T22:42:56.646001Z"
+     "end_time": "2019-01-21T04:19:38.654973Z",
+     "start_time": "2019-01-21T04:19:37.076666Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1ea6f290>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2536a1d0>"
       ]
      },
      "execution_count": 28,
@@ -2372,15 +2372,15 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:57.918868Z",
-     "start_time": "2019-01-20T22:42:57.075425Z"
+     "end_time": "2019-01-21T04:19:40.969341Z",
+     "start_time": "2019-01-21T04:19:38.662179Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1ededb50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a253d5990>"
       ]
      },
      "execution_count": 29,
@@ -2428,15 +2428,15 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:58.735142Z",
-     "start_time": "2019-01-20T22:42:57.923837Z"
+     "end_time": "2019-01-21T04:19:42.798887Z",
+     "start_time": "2019-01-21T04:19:40.980817Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a22b4bb10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a254a4410>"
       ]
      },
      "execution_count": 30,
@@ -2484,8 +2484,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:42:58.750383Z",
-     "start_time": "2019-01-20T22:42:58.740131Z"
+     "end_time": "2019-01-21T04:19:42.864346Z",
+     "start_time": "2019-01-21T04:19:42.804989Z"
     }
    },
    "outputs": [],
@@ -2513,8 +2513,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:00.459562Z",
-     "start_time": "2019-01-20T22:42:58.755128Z"
+     "end_time": "2019-01-21T04:19:45.914118Z",
+     "start_time": "2019-01-21T04:19:42.914503Z"
     },
     "run_control": {
      "marked": true
@@ -2583,8 +2583,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:00.822919Z",
-     "start_time": "2019-01-20T22:43:00.463383Z"
+     "end_time": "2019-01-21T04:19:46.985474Z",
+     "start_time": "2019-01-21T04:19:45.918447Z"
     }
    },
    "outputs": [
@@ -2630,8 +2630,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:01.200676Z",
-     "start_time": "2019-01-20T22:43:00.827546Z"
+     "end_time": "2019-01-21T04:19:47.723715Z",
+     "start_time": "2019-01-21T04:19:46.995210Z"
     }
    },
    "outputs": [
@@ -2676,8 +2676,8 @@
    "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:03.488376Z",
-     "start_time": "2019-01-20T22:43:01.206587Z"
+     "end_time": "2019-01-21T04:19:50.887173Z",
+     "start_time": "2019-01-21T04:19:47.729026Z"
     }
    },
    "outputs": [
@@ -2759,8 +2759,8 @@
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:04.941365Z",
-     "start_time": "2019-01-20T22:43:03.492862Z"
+     "end_time": "2019-01-21T04:19:53.156712Z",
+     "start_time": "2019-01-21T04:19:50.891461Z"
     }
    },
    "outputs": [
@@ -2838,8 +2838,8 @@
    "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:06.298267Z",
-     "start_time": "2019-01-20T22:43:04.946145Z"
+     "end_time": "2019-01-21T04:19:54.146308Z",
+     "start_time": "2019-01-21T04:19:53.161697Z"
     }
    },
    "outputs": [],
@@ -2887,15 +2887,15 @@
    "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:08.450286Z",
-     "start_time": "2019-01-20T22:43:06.303826Z"
+     "end_time": "2019-01-21T04:19:55.640139Z",
+     "start_time": "2019-01-21T04:19:54.151267Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a204a50d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a213408d0>"
       ]
      },
      "execution_count": 38,
@@ -2905,7 +2905,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a233da690>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a25ccb390>"
       ]
      },
      "execution_count": 38,
@@ -2953,15 +2953,15 @@
    "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:09.972256Z",
-     "start_time": "2019-01-20T22:43:08.456152Z"
+     "end_time": "2019-01-21T04:19:56.692689Z",
+     "start_time": "2019-01-21T04:19:55.645195Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1093b0090>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10bd9a390>"
       ]
      },
      "execution_count": 39,
@@ -2971,7 +2971,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1093b0090>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10bd9a390>"
       ]
      },
      "execution_count": 39,
@@ -3017,8 +3017,8 @@
    "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:10.530989Z",
-     "start_time": "2019-01-20T22:43:09.979264Z"
+     "end_time": "2019-01-21T04:19:57.137460Z",
+     "start_time": "2019-01-21T04:19:56.701998Z"
     },
     "run_control": {
      "marked": true
@@ -3037,8 +3037,8 @@
    "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:43:12.446821Z",
-     "start_time": "2019-01-20T22:43:10.537041Z"
+     "end_time": "2019-01-21T04:19:59.168358Z",
+     "start_time": "2019-01-21T04:19:57.144348Z"
     }
    },
    "outputs": [
