--- a/public03_form_visualize_labels.ipynb
+++ b/public03_form_visualize_labels.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:39.165192Z",
-     "start_time": "2019-01-20T22:48:33.941302Z"
+     "end_time": "2019-01-21T04:18:25.443355Z",
+     "start_time": "2019-01-21T04:18:11.854102Z"
     },
     "run_control": {
      "marked": true
@@ -49,8 +49,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:39.334308Z",
-     "start_time": "2019-01-20T22:48:39.170579Z"
+     "end_time": "2019-01-21T04:18:25.630301Z",
+     "start_time": "2019-01-21T04:18:25.450984Z"
     }
    },
    "outputs": [
@@ -85,8 +85,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:39.377288Z",
-     "start_time": "2019-01-20T22:48:39.339880Z"
+     "end_time": "2019-01-21T04:18:25.857000Z",
+     "start_time": "2019-01-21T04:18:25.634174Z"
     }
    },
    "outputs": [],
@@ -202,8 +202,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:43.588258Z",
-     "start_time": "2019-01-20T22:48:39.382110Z"
+     "end_time": "2019-01-21T04:18:33.751435Z",
+     "start_time": "2019-01-21T04:18:25.864899Z"
     }
    },
    "outputs": [],
@@ -253,8 +253,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:43.853268Z",
-     "start_time": "2019-01-20T22:48:43.592253Z"
+     "end_time": "2019-01-21T04:18:34.114585Z",
+     "start_time": "2019-01-21T04:18:33.757140Z"
     }
    },
    "outputs": [
@@ -554,8 +554,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:44.395887Z",
-     "start_time": "2019-01-20T22:48:43.858519Z"
+     "end_time": "2019-01-21T04:18:35.506236Z",
+     "start_time": "2019-01-21T04:18:34.118837Z"
     }
    },
    "outputs": [],
@@ -585,8 +585,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:45.731842Z",
-     "start_time": "2019-01-20T22:48:44.402171Z"
+     "end_time": "2019-01-21T04:18:39.124054Z",
+     "start_time": "2019-01-21T04:18:35.512821Z"
     }
    },
    "outputs": [],
@@ -621,8 +621,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:56.233469Z",
-     "start_time": "2019-01-20T22:48:45.735503Z"
+     "end_time": "2019-01-21T04:18:54.436332Z",
+     "start_time": "2019-01-21T04:18:39.130148Z"
     },
     "scrolled": false
    },
@@ -726,8 +726,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:59.082507Z",
-     "start_time": "2019-01-20T22:48:56.237129Z"
+     "end_time": "2019-01-21T04:18:57.359230Z",
+     "start_time": "2019-01-21T04:18:54.441843Z"
     }
    },
    "outputs": [],
@@ -744,8 +744,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:59.136449Z",
-     "start_time": "2019-01-20T22:48:59.088678Z"
+     "end_time": "2019-01-21T04:18:57.397594Z",
+     "start_time": "2019-01-21T04:18:57.366255Z"
     }
    },
    "outputs": [
@@ -894,8 +894,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:59.520426Z",
-     "start_time": "2019-01-20T22:48:59.142700Z"
+     "end_time": "2019-01-21T04:18:58.035311Z",
+     "start_time": "2019-01-21T04:18:57.403172Z"
     }
    },
    "outputs": [
@@ -954,8 +954,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:59.563442Z",
-     "start_time": "2019-01-20T22:48:59.526092Z"
+     "end_time": "2019-01-21T04:18:58.119056Z",
+     "start_time": "2019-01-21T04:18:58.044121Z"
     }
    },
    "outputs": [],
@@ -980,8 +980,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:59.654968Z",
-     "start_time": "2019-01-20T22:48:59.568319Z"
+     "end_time": "2019-01-21T04:18:58.239654Z",
+     "start_time": "2019-01-21T04:18:58.122219Z"
     }
    },
    "outputs": [
@@ -1218,8 +1218,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:48:59.822934Z",
-     "start_time": "2019-01-20T22:48:59.660614Z"
+     "end_time": "2019-01-21T04:18:58.536184Z",
+     "start_time": "2019-01-21T04:18:58.245015Z"
     }
    },
    "outputs": [],
@@ -1257,8 +1257,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:00.484476Z",
-     "start_time": "2019-01-20T22:48:59.828374Z"
+     "end_time": "2019-01-21T04:18:59.588318Z",
+     "start_time": "2019-01-21T04:18:58.545969Z"
     },
     "run_control": {
      "marked": false
@@ -1350,8 +1350,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:01.652508Z",
-     "start_time": "2019-01-20T22:49:00.489904Z"
+     "end_time": "2019-01-21T04:19:00.767130Z",
+     "start_time": "2019-01-21T04:18:59.592987Z"
     }
    },
    "outputs": [],
@@ -1378,26 +1378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:01.706119Z",
-     "start_time": "2019-01-20T22:49:01.657727Z"
+     "end_time": "2019-01-21T04:19:19.009607Z",
+     "start_time": "2019-01-21T04:19:18.940694Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df = spark.table('team_game_line_labels').cache()"
+    "df = spark.table('labels.team_game_line_labels').cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:02.856225Z",
-     "start_time": "2019-01-20T22:49:01.710221Z"
+     "end_time": "2019-01-21T04:19:20.833397Z",
+     "start_time": "2019-01-21T04:19:19.015475Z"
     }
    },
    "outputs": [
@@ -1453,7 +1453,7 @@
        "1       0  1923  6   920"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,11 +1464,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:10.822525Z",
-     "start_time": "2019-01-20T22:49:02.861825Z"
+     "end_time": "2019-01-21T04:19:29.762728Z",
+     "start_time": "2019-01-21T04:19:20.839661Z"
     }
    },
    "outputs": [
@@ -1547,11 +1547,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:30.132706Z",
-     "start_time": "2019-01-20T22:49:10.827149Z"
+     "end_time": "2019-01-21T04:20:00.302095Z",
+     "start_time": "2019-01-21T04:19:29.767766Z"
     },
     "scrolled": true
    },
@@ -1802,11 +1802,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:30.173702Z",
-     "start_time": "2019-01-20T22:49:30.137639Z"
+     "end_time": "2019-01-21T04:20:00.376925Z",
+     "start_time": "2019-01-21T04:20:00.306421Z"
     }
    },
    "outputs": [],
@@ -1833,11 +1833,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:30.311586Z",
-     "start_time": "2019-01-20T22:49:30.179790Z"
+     "end_time": "2019-01-21T04:20:00.520974Z",
+     "start_time": "2019-01-21T04:20:00.381910Z"
     }
    },
    "outputs": [
@@ -2031,7 +2031,7 @@
        "ML Favorite's                      0             0             1             0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2042,11 +2042,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:30.965039Z",
-     "start_time": "2019-01-20T22:49:30.316403Z"
+     "end_time": "2019-01-21T04:20:01.275928Z",
+     "start_time": "2019-01-21T04:20:00.526364Z"
     }
    },
    "outputs": [
@@ -2102,7 +2102,7 @@
        "2      0.5  0.500000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2119,11 +2119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:33.518166Z",
-     "start_time": "2019-01-20T22:49:30.970221Z"
+     "end_time": "2019-01-21T04:20:04.276975Z",
+     "start_time": "2019-01-21T04:20:01.280483Z"
     }
    },
    "outputs": [],
@@ -2152,11 +2152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:33.553229Z",
-     "start_time": "2019-01-20T22:49:33.523138Z"
+     "end_time": "2019-01-21T04:20:04.300574Z",
+     "start_time": "2019-01-21T04:20:04.281869Z"
     }
    },
    "outputs": [
@@ -2225,7 +2225,7 @@
        " 1                        0.671494                 0.669646  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2236,21 +2236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:33.772140Z",
-     "start_time": "2019-01-20T22:49:33.560512Z"
+     "end_time": "2019-01-21T04:20:04.630705Z",
+     "start_time": "2019-01-21T04:20:04.305361Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1832cc90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1d40efd0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2289,11 +2289,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:33.921946Z",
-     "start_time": "2019-01-20T22:49:33.775504Z"
+     "end_time": "2019-01-21T04:20:04.823810Z",
+     "start_time": "2019-01-21T04:20:04.634496Z"
     }
    },
    "outputs": [
@@ -2349,7 +2349,7 @@
        "2      0.5     78"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2360,11 +2360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:53.259707Z",
-     "start_time": "2019-01-20T22:49:33.926759Z"
+     "end_time": "2019-01-21T04:20:28.123558Z",
+     "start_time": "2019-01-21T04:20:04.828706Z"
     },
     "scrolled": false
    },
@@ -2577,11 +2577,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:54.364175Z",
-     "start_time": "2019-01-20T22:49:53.264286Z"
+     "end_time": "2019-01-21T04:20:29.416090Z",
+     "start_time": "2019-01-21T04:20:28.128100Z"
     },
     "scrolled": false
    },
@@ -2818,27 +2818,27 @@
        "Vikings     0.500000  0.600000"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1a474510>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1d777fd0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1a987ed0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1d4df110>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2878,11 +2878,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-20T22:49:54.846436Z",
-     "start_time": "2019-01-20T22:49:54.370654Z"
+     "end_time": "2019-01-21T04:20:30.130133Z",
+     "start_time": "2019-01-21T04:20:29.422170Z"
     }
    },
    "outputs": [
@@ -3084,17 +3084,17 @@
        "Packers       0.595745"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1839d450>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a22e567d0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3123,18 +3123,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
   },
   "toc": {
    "base_numbering": 1,
