did more feature engineering

--- a/feature_engineering/00_plan_and_ideas.ipynb
+++ b/feature_engineering/00_plan_and_ideas.ipynb
@@ -155,14 +155,12 @@
     "* &#x1F44E;\tshould season not be a feature? since it can include games afterwards. if one year has 60% and another year has 50%... given I know it's in the 60% year, I know you'll win 60%... since there don't appear to be a lot of time trends in the initial exploration, I won't use season\n",
     "\n",
     "### Teams (both teams)\n",
-    "* &#x1F6A8; is intra-division\n",
-    "* &#x1F6A8; is intra-conference\n",
     "* &#x1F6A8; record last 5, YTD, last 16, last 3 years, etc.\n",
     "* &#x1F6A8; cover record last 5, YTD, ...\n",
     "* &#x23F8; recent scores (lot of shootouts recently?\n",
     "* &#x270B; fanbase size, average attendance, etc.\n",
     "* &#x1F6A8; ages (median, mean)\n",
-    " * &#x23F8; how does age interact with week # (do older teams tire?)\n",
+    "* &#x23F8; how does age interact with week # (do older teams tire?)\n",
     "* &#x2753;\tdivision?\n",
     "* &#x2753;\tconference?\n",
     "\n",
@@ -171,7 +169,9 @@
     "* &#x270B; is one team tanking?\n",
     "\n",
     "### Matchup\n",
-    "* &#x23F8; head-to-head record recent history\n",
+    "* &#x2714; is intra-division\n",
+    "* &#x2714; is intra-conference\n",
+    "* &#x2714; head-to-head record recent history\n",
     "* &#x270B; recent record vs. similar team\n",
     "* &#x270B; TE vs. TE coverage, net rating\n",
     "* &#x23F3; *eventually get scheme data*\n",
