added season as a key to stadium, and checked downstream tasks

--- a/initialize.ipynb
+++ b/initialize.ipynb
@@ -41,6 +41,8 @@
     }
    ],
    "source": [
+    "from __future__ import division\n",
+    "\n",
     "from cycler import cycler\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
