--- a/public02_explore_scores_lines.ipynb
+++ b/public02_explore_scores_lines.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:25.788214Z",
-     "start_time": "2019-01-21T04:18:02.516588Z"
+     "end_time": "2019-01-22T02:56:36.359495Z",
+     "start_time": "2019-01-22T02:56:27.169424Z"
     }
    },
    "outputs": [
@@ -39,8 +39,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:25.947499Z",
-     "start_time": "2019-01-21T04:18:25.795177Z"
+     "end_time": "2019-01-22T02:56:36.611821Z",
+     "start_time": "2019-01-22T02:56:36.364252Z"
     }
    },
    "outputs": [
@@ -75,8 +75,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:26.818327Z",
-     "start_time": "2019-01-21T04:18:25.952577Z"
+     "end_time": "2019-01-22T02:56:37.481722Z",
+     "start_time": "2019-01-22T02:56:36.618065Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:31.629101Z",
-     "start_time": "2019-01-21T04:18:26.823798Z"
+     "end_time": "2019-01-22T02:56:41.740644Z",
+     "start_time": "2019-01-22T02:56:37.486813Z"
     }
    },
    "outputs": [],
@@ -117,8 +117,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:32.662281Z",
-     "start_time": "2019-01-21T04:18:31.635612Z"
+     "end_time": "2019-01-22T02:56:42.229270Z",
+     "start_time": "2019-01-22T02:56:41.745403Z"
     }
    },
    "outputs": [
@@ -238,8 +238,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:33.694130Z",
-     "start_time": "2019-01-21T04:18:32.669712Z"
+     "end_time": "2019-01-22T02:56:42.894546Z",
+     "start_time": "2019-01-22T02:56:42.235721Z"
     }
    },
    "outputs": [],
@@ -274,8 +274,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:34.229383Z",
-     "start_time": "2019-01-21T04:18:33.700461Z"
+     "end_time": "2019-01-22T02:56:43.321177Z",
+     "start_time": "2019-01-22T02:56:42.900079Z"
     }
    },
    "outputs": [
@@ -431,8 +431,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:34.674900Z",
-     "start_time": "2019-01-21T04:18:34.234465Z"
+     "end_time": "2019-01-22T02:56:43.663366Z",
+     "start_time": "2019-01-22T02:56:43.326909Z"
     }
    },
    "outputs": [
@@ -605,8 +605,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:36.350421Z",
-     "start_time": "2019-01-21T04:18:34.685245Z"
+     "end_time": "2019-01-22T02:56:45.032967Z",
+     "start_time": "2019-01-22T02:56:43.668874Z"
     }
    },
    "outputs": [
@@ -691,8 +691,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:40.912098Z",
-     "start_time": "2019-01-21T04:18:36.356118Z"
+     "end_time": "2019-01-22T02:56:49.150126Z",
+     "start_time": "2019-01-22T02:56:45.039066Z"
     }
    },
    "outputs": [
@@ -740,8 +740,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:47.214836Z",
-     "start_time": "2019-01-21T04:18:40.916199Z"
+     "end_time": "2019-01-22T02:56:54.568696Z",
+     "start_time": "2019-01-22T02:56:49.155469Z"
     }
    },
    "outputs": [],
@@ -776,8 +776,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:18:57.649492Z",
-     "start_time": "2019-01-21T04:18:47.220878Z"
+     "end_time": "2019-01-22T02:57:01.895307Z",
+     "start_time": "2019-01-22T02:56:54.574482Z"
     },
     "scrolled": false
    },
@@ -872,8 +872,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:03.522235Z",
-     "start_time": "2019-01-21T04:18:57.657875Z"
+     "end_time": "2019-01-22T02:57:11.541110Z",
+     "start_time": "2019-01-22T02:57:01.902681Z"
     },
     "scrolled": false
    },
@@ -948,8 +948,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:05.036591Z",
-     "start_time": "2019-01-21T04:19:03.527240Z"
+     "end_time": "2019-01-22T02:57:12.609955Z",
+     "start_time": "2019-01-22T02:57:11.545218Z"
     },
     "scrolled": false
    },
@@ -1002,8 +1002,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:05.995726Z",
-     "start_time": "2019-01-21T04:19:05.043254Z"
+     "end_time": "2019-01-22T02:57:14.561498Z",
+     "start_time": "2019-01-22T02:57:12.615166Z"
     }
    },
    "outputs": [
@@ -1046,8 +1046,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:07.819019Z",
-     "start_time": "2019-01-21T04:19:06.001446Z"
+     "end_time": "2019-01-22T02:57:18.352637Z",
+     "start_time": "2019-01-22T02:57:14.570082Z"
     },
     "scrolled": false
    },
@@ -1142,8 +1142,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:07.984233Z",
-     "start_time": "2019-01-21T04:19:07.823995Z"
+     "end_time": "2019-01-22T02:57:18.647971Z",
+     "start_time": "2019-01-22T02:57:18.358962Z"
     }
    },
    "outputs": [
@@ -1292,8 +1292,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:10.676966Z",
-     "start_time": "2019-01-21T04:19:07.992460Z"
+     "end_time": "2019-01-22T02:57:22.348972Z",
+     "start_time": "2019-01-22T02:57:18.654163Z"
     }
    },
    "outputs": [
@@ -1473,8 +1473,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:12.363771Z",
-     "start_time": "2019-01-21T04:19:10.681536Z"
+     "end_time": "2019-01-22T02:57:25.514765Z",
+     "start_time": "2019-01-22T02:57:22.355818Z"
     },
     "run_control": {
      "marked": true
@@ -1484,7 +1484,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a213c27d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e2be890>"
       ]
      },
      "execution_count": 19,
@@ -1532,8 +1532,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:32.070243Z",
-     "start_time": "2019-01-21T04:19:12.413486Z"
+     "end_time": "2019-01-22T02:57:41.346622Z",
+     "start_time": "2019-01-22T02:57:25.529353Z"
     },
     "scrolled": true
    },
@@ -1717,8 +1717,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:32.364066Z",
-     "start_time": "2019-01-21T04:19:32.075349Z"
+     "end_time": "2019-01-22T02:57:41.527930Z",
+     "start_time": "2019-01-22T02:57:41.351635Z"
     }
    },
    "outputs": [],
@@ -1742,8 +1742,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:32.552374Z",
-     "start_time": "2019-01-21T04:19:32.376884Z"
+     "end_time": "2019-01-22T02:57:41.694122Z",
+     "start_time": "2019-01-22T02:57:41.533230Z"
     }
    },
    "outputs": [
@@ -1904,8 +1904,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:33.913511Z",
-     "start_time": "2019-01-21T04:19:32.558500Z"
+     "end_time": "2019-01-22T02:57:42.494776Z",
+     "start_time": "2019-01-22T02:57:41.697949Z"
     }
    },
    "outputs": [],
@@ -1925,8 +1925,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:34.174518Z",
-     "start_time": "2019-01-21T04:19:33.919527Z"
+     "end_time": "2019-01-22T02:57:42.660093Z",
+     "start_time": "2019-01-22T02:57:42.500839Z"
     }
    },
    "outputs": [
@@ -2125,15 +2125,15 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:36.510281Z",
-     "start_time": "2019-01-21T04:19:34.181524Z"
+     "end_time": "2019-01-22T02:57:44.215011Z",
+     "start_time": "2019-01-22T02:57:42.666463Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2171a790>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1d37bcd0>"
       ]
      },
      "execution_count": 25,
@@ -2201,8 +2201,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:36.919606Z",
-     "start_time": "2019-01-21T04:19:36.531966Z"
+     "end_time": "2019-01-22T02:57:44.637856Z",
+     "start_time": "2019-01-22T02:57:44.220565Z"
     }
    },
    "outputs": [],
@@ -2231,8 +2231,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:37.070586Z",
-     "start_time": "2019-01-21T04:19:36.925835Z"
+     "end_time": "2019-01-22T02:57:44.882156Z",
+     "start_time": "2019-01-22T02:57:44.646185Z"
     }
    },
    "outputs": [
@@ -2320,15 +2320,15 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:38.654973Z",
-     "start_time": "2019-01-21T04:19:37.076666Z"
+     "end_time": "2019-01-22T02:57:45.834180Z",
+     "start_time": "2019-01-22T02:57:44.888354Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2536a1d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a21cf3f50>"
       ]
      },
      "execution_count": 28,
@@ -2372,15 +2372,15 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:40.969341Z",
-     "start_time": "2019-01-21T04:19:38.662179Z"
+     "end_time": "2019-01-22T02:57:47.293335Z",
+     "start_time": "2019-01-22T02:57:45.841566Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a253d5990>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e40bb50>"
       ]
      },
      "execution_count": 29,
@@ -2428,15 +2428,15 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:42.798887Z",
-     "start_time": "2019-01-21T04:19:40.980817Z"
+     "end_time": "2019-01-22T02:57:48.897771Z",
+     "start_time": "2019-01-22T02:57:47.298307Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a254a4410>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a21e41b10>"
       ]
      },
      "execution_count": 30,
@@ -2484,8 +2484,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:42.864346Z",
-     "start_time": "2019-01-21T04:19:42.804989Z"
+     "end_time": "2019-01-22T02:57:48.911548Z",
+     "start_time": "2019-01-22T02:57:48.901939Z"
     }
    },
    "outputs": [],
@@ -2513,8 +2513,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:45.914118Z",
-     "start_time": "2019-01-21T04:19:42.914503Z"
+     "end_time": "2019-01-22T02:57:52.051251Z",
+     "start_time": "2019-01-22T02:57:48.917339Z"
     },
     "run_control": {
      "marked": true
@@ -2583,8 +2583,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:46.985474Z",
-     "start_time": "2019-01-21T04:19:45.918447Z"
+     "end_time": "2019-01-22T02:57:53.232111Z",
+     "start_time": "2019-01-22T02:57:52.055906Z"
     }
    },
    "outputs": [
@@ -2630,8 +2630,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:47.723715Z",
-     "start_time": "2019-01-21T04:19:46.995210Z"
+     "end_time": "2019-01-22T02:57:54.161008Z",
+     "start_time": "2019-01-22T02:57:53.236752Z"
     }
    },
    "outputs": [
@@ -2676,8 +2676,8 @@
    "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:50.887173Z",
-     "start_time": "2019-01-21T04:19:47.729026Z"
+     "end_time": "2019-01-22T02:57:58.710418Z",
+     "start_time": "2019-01-22T02:57:54.165632Z"
     }
    },
    "outputs": [
@@ -2759,8 +2759,8 @@
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:53.156712Z",
-     "start_time": "2019-01-21T04:19:50.891461Z"
+     "end_time": "2019-01-22T02:58:02.432734Z",
+     "start_time": "2019-01-22T02:57:58.715976Z"
     }
    },
    "outputs": [
@@ -2838,8 +2838,8 @@
    "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:54.146308Z",
-     "start_time": "2019-01-21T04:19:53.161697Z"
+     "end_time": "2019-01-22T02:58:04.102231Z",
+     "start_time": "2019-01-22T02:58:02.440268Z"
     }
    },
    "outputs": [],
@@ -2887,15 +2887,15 @@
    "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:55.640139Z",
-     "start_time": "2019-01-21T04:19:54.151267Z"
+     "end_time": "2019-01-22T02:58:07.753986Z",
+     "start_time": "2019-01-22T02:58:04.108154Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a213408d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e246c50>"
       ]
      },
      "execution_count": 38,
@@ -2905,7 +2905,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a25ccb390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a226bb610>"
       ]
      },
      "execution_count": 38,
@@ -2953,15 +2953,15 @@
    "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:56.692689Z",
-     "start_time": "2019-01-21T04:19:55.645195Z"
+     "end_time": "2019-01-22T02:58:10.042022Z",
+     "start_time": "2019-01-22T02:58:07.761933Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10bd9a390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2280aad0>"
       ]
      },
      "execution_count": 39,
@@ -2971,7 +2971,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10bd9a390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2280aad0>"
       ]
      },
      "execution_count": 39,
@@ -3017,8 +3017,8 @@
    "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:57.137460Z",
-     "start_time": "2019-01-21T04:19:56.701998Z"
+     "end_time": "2019-01-22T02:58:10.580793Z",
+     "start_time": "2019-01-22T02:58:10.046385Z"
     },
     "run_control": {
      "marked": true
@@ -3037,8 +3037,8 @@
    "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-21T04:19:59.168358Z",
-     "start_time": "2019-01-21T04:19:57.144348Z"
+     "end_time": "2019-01-22T02:58:11.950175Z",
+     "start_time": "2019-01-22T02:58:10.587584Z"
     }
    },
    "outputs": [
